fix: styling and align items

--- a/frontend/src/components/LoginPage/LoginPage.module.css
+++ b/frontend/src/components/LoginPage/LoginPage.module.css
@@ -12,20 +12,24 @@
 
 .cardContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh
+  height: 100vh; /* Ensures it fills the viewport height */
 }
 
 .cardStyle {
   padding: 30px;
+  display: flex;
+  flex-direction: column; /* Stack elements vertically */
   border-radius: 20px;
   background-color: whitesmoke;
+  align-items: center; /* Center items horizontally */
 }
+
 
 .logoImage {
   height: 40px;
+  align-self: center;
 }
 
 .signInText {
